Moved all block detection + processing code into separate `Block` classes

--- a/markdown4j/build.gradle
+++ b/markdown4j/build.gradle
@@ -6,4 +6,5 @@ version '1.0'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
 }
