--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,11 @@ buildscript {
 }
 
 allprojects {
+    apply plugin: 'java'
+
+    sourceCompatibility = 1.6
+    targetCompatibility = 1.6
+
     repositories {
         jcenter()
     }
