--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ buildscript {
 }
 
 allprojects {
+    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
     apply plugin: 'java'
 
     sourceCompatibility = 1.6
