--- a/markdown/build.gradle
+++ b/markdown/build.gradle
@@ -1,7 +1,45 @@
+plugins {
+    id "com.jfrog.bintray" version "1.6"
+}
+
 apply plugin: 'java'
 
-group 'net.dgardiner.markdown'
-version '1.0'
+def currentVersion = '1.0.0'
+
+group = 'net.dgardiner.markdown'
+version = currentVersion
+
+bintray {
+    user = System.getenv('BINTRAY_USER')
+    key = System.getenv('BINTRAY_API_KEY')
+
+    publications = ['MyPublication']
+
+    pkg {
+        repo = 'maven'
+        name = 'markdown-java'
+        userOrg = user
+        licenses = ['BSD 3-Clause']
+
+        vcsUrl = 'https://github.com/fuzeman/markdown-java.git'
+
+        version {
+            name = currentVersion
+        }
+    }
+}
+
+publishing {
+    publications {
+        MyPublication(MavenPublication) {
+            from components.java
+
+            groupId 'net.dgardiner.markdown'
+            artifactId 'markdown'
+            version currentVersion
+        }
+    }
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
